Finish refactoring to use useApi; update user controller due to wingedkeys changes; remove graphql imports; update login prompt to undefined as opposed to always requiring consent; merge wingedkeys model and chris/melanie user changes and hedwig tag into one swagger.json; delete useOASClient and DefaultApi; apply chris/melanie user context changes
